--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                 <div class="main-nav">
                     <ul class="nav-menu">
                       <li><a href="#">About Us</a></li>
-                      <li><a href="#">Roadmap</a></li>
-                      <li><a href="#">Meet the Team</a></li>
-                      <li><a href="#">Partners</a></li>
+                      <li><a href="#roadmap">Roadmap</a></li>
+                      <li><a href="#team">Meet the Team</a></li>
+                      <li><a href="#roadmap">Partners</a></li>
                     </ul>
                 </div>
                 <div class="nav-links">
-                    <img src="./assets/image/twitter.svg" class="h-links" alt="twitter"/>
-                    <img src="./assets/image/discord.svg" class="h-links" alt="discord"/>
+                    <a><img src="./assets/image/twitter.svg" class="h-links" alt="twitter"/></a>
+                    <a><img src="./assets/image/discord.svg" class="h-links" alt="discord"/></a>
                 </div>
             </nav>
         </header>
@@ -100,8 +100,8 @@
                 </div>
             </div>
         <div class="see">
-            <a>See whitepaper</a>
-            <img src="./assets/image/see.svg" alt="src">
+            <a>See whitepaper <img src="./assets/image/see.svg" alt="src"></a>
+            
         </div>
     </section>
 
@@ -188,7 +188,9 @@
                         has higher education in these fields. Economist. Extensive experience
                         as an advisor and manager of SOL/ETH projects. 
                     </p>
-                    <img src="./assets/image/twitter.svg" alt="twitter">
+                    <a>
+                        <img src="./assets/image/twitter.svg" alt="twitter">
+                    </a>
                 </div>
             </div>
 
@@ -208,7 +210,9 @@
                     <p class="personality-description">
                         He is originally from Poland, but also lives in Belarus. Experienced web2 developer and IRL businessman. Arkle's guide in IRL. Extensive experience in mediating between NFT ETH/Polygon projects and IRL. 
                     </p>
-                    <img src="./assets/image/twitter.svg" alt="twitter">
+                    <a>
+                        <img src="./assets/image/twitter.svg" alt="twitter">
+                    </a>
                 </div>
             </div>
             <div class="personality">
@@ -228,7 +232,9 @@
                         Experienced web2 and IRL artist. Also originally from Belarus. Ideological inspirer and female face of Arkle.
                     </p>
                     
-                    <img src="./assets/image/twitter.svg" alt="twitter" />
+                    <a>
+                        <img src="./assets/image/twitter.svg" alt="twitter">
+                    </a>
                 </div>
             </div>
             <!-- <div class="personality">
@@ -254,17 +260,16 @@ in Belarus. Experienced web2 developer and IRL businessman. Arkle's guide in IRL
         </div>
     </section>
 
-    <!-- <section id="partners">
+    <section id="partners">
         <h1 class="gradient title">Partners</h1>
         <div class="partners">
-            <img src="./assets/image/partners/tsunami.svg" alt="tsunami" />
-            <img src="./assets/image/partners/tsunami.svg" alt="tsunami" />
-            <img src="./assets/image/partners/indexer.svg" alt="indexer" />
-            <img src="./assets/image/partners/aptopad.svg" alt="aptopad" />
-            <img src="./assets/image/partners/p1.svg" alt="p1" />
-            <img src="./assets/image/partners/unicorn.svg" alt="unicorn" />
+            <a><img src="./assets/image/partners/tsunami.svg" alt="tsunami" /></a>
+            <a><img src="./assets/image/partners/indexer.svg" alt="indexer" /></a>
+            <a><img src="./assets/image/partners/aptopad.svg" alt="aptopad" /></a>
+            <a><img src="./assets/image/partners/p1.svg" alt="p1" /></a>
+            <a><img src="./assets/image/partners/unicorn.svg" alt="unicorn" /></a>
         </div>
-    </section> -->
+    </section>
 
     <section id="horses" class="autoplay">
         <!-- <div class="horses_img"><img src="./assets/image/horses/h1.svg" alt="horse" /></div> -->
@@ -287,8 +292,8 @@ in Belarus. Experienced web2 developer and IRL businessman. Arkle's guide in IRL
             <span>All Right Reserved</span>
         </div>
         <div class="footer-icon">
-            <img src="./assets/image/twitter.svg" alt="twitter"/>
-            <img src="./assets/image/discord.svg" alt="discord"/>
+            <a><img src="./assets/image/twitter.svg" alt="twitter"/></a>
+            <a><img src="./assets/image/discord.svg" alt="discord"/></a>
         </div>
     </footer>
 
