--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                         face of Arkle.
                     </p>
 
-                    <a target="_blank" href="https://twitter.com/jlbel_art">
+                    <a target="_blank" href="https://www.instagram.com/jlbel_art/?next=%2F">
                         <img src="./assets/image/twitter.svg" alt="twitter">
                     </a>
                 </div>
@@ -302,19 +302,22 @@ in Belarus. Experienced web2 developer and IRL businessman. Arkle's guide in IRL
         <div class="horses_img"><img src="./assets/image/horses/h3.svg" alt="horse" /></div>
         <div class="horses_img"><img src="./assets/image/horses/h4.svg" alt="horse" /></div>
         <div class="horses_img"><img src="./assets/image/horses/h5.svg" alt="horse" /></div>
-        <!-- <div class="horses_img"><img src="./assets/image/horses/h6.svg" alt="horse" /></div> -->
+        <!-- <div class="horses_img new"><img src="assets/image/horses/h6.svg" alt="horse" /></div> -->
         <!-- <div class="horses_img"><img src="./assets/image/horses/h1.svg" alt="horse" /></div> -->
         <div class="horses_img"><img src="./assets/image/horses/h2.svg" alt="horse" /></div>
         <div class="horses_img"><img src="./assets/image/horses/h3.svg" alt="horse" /></div>
         <div class="horses_img"><img src="./assets/image/horses/h4.svg" alt="horse" /></div>
         <div class="horses_img"><img src="./assets/image/horses/h5.svg" alt="horse" /></div>
+        <!-- <div class="horses_img new"><img src="assets/image/horses/h6.svg" alt="horse" /></div> -->
+        <!-- <div class="horses_img"><img src="assets/image/horses/2.svg" alt="horse" /></div> -->
+        <!-- <div class="horses_img"><img src="./assets/image/horses/h5.svg" alt="horse" /></div> -->
         <!-- <div class="horses_img"><img src="./assets/image/horses/h6.svg" alt="horse" /></div>      -->
     </section>
 
     <footer>
         <div class="footer-title">
             <span>ARKLE © 2023.</span>
-            <span>All Right Reserved</span>
+            <span>All Rights Reserved</span>
         </div>
         <div class="footer-icon">
             <a target="_blank" href="https://twitter.com/arkle_nft"><img src="./assets/image/twitter.svg"
