insta and partners

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <li><a href="#">About Us</a></li>
                         <li><a href="#roadmap">Roadmap</a></li>
                         <li><a href="#team">Meet the Team</a></li>
-                        <li><a href="#roadmap">Partners</a></li>
+                        <li><a href="#partners">Partners</a></li>
                     </ul>
                 </div>
                 <div class="nav-links">
@@ -254,7 +254,7 @@
                     </p>
 
                     <a target="_blank" href="https://www.instagram.com/jlbel_art/?next=%2F">
-                        <img src="./assets/image/twitter.svg" alt="twitter">
+                        <img src="./assets/image/instagram.svg" alt="instagram">
                     </a>
                 </div>
             </div>
