--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     </p>
 
                     <a target="_blank" href="https://www.instagram.com/jlbel_art/?next=%2F">
-                        <img src="./assets/image/instagram.svg" alt="instagram">
+                        <img src="assets/image/Instagram.svg" alt="instagram">
                     </a>
                 </div>
             </div>
