--- a/index.html
+++ b/index.html
@@ -297,21 +297,26 @@ in Belarus. Experienced web2 developer and IRL businessman. Arkle's guide in IRL
     </section>
 
     <section id="horses" class="autoplay">
-        <!-- <div class="horses_img"><img src="./assets/image/horses/h1.svg" alt="horse" /></div> -->
+        <div class="horses_img"><img src="./assets/image/horses/h1.svg" alt="horse" /></div>
         <div class="horses_img"><img src="./assets/image/horses/h2.svg" alt="horse" /></div>
         <div class="horses_img"><img src="./assets/image/horses/h3.svg" alt="horse" /></div>
         <div class="horses_img"><img src="./assets/image/horses/h4.svg" alt="horse" /></div>
         <div class="horses_img"><img src="./assets/image/horses/h5.svg" alt="horse" /></div>
-        <!-- <div class="horses_img new"><img src="assets/image/horses/h6.svg" alt="horse" /></div> -->
-        <!-- <div class="horses_img"><img src="./assets/image/horses/h1.svg" alt="horse" /></div> -->
+        <div class="horses_img new"><img src="assets/image/horses/h6.svg" alt="horse" /></div>
+        <div class="horses_img new"><img src="assets/image/horses/h7.svg" alt="horse" /></div>
+        <div class="horses_img new"><img src="assets/image/horses/h8.svg" alt="horse" /></div>
+        <div class="horses_img new"><img src="assets/image/horses/h9.svg" alt="horse" /></div>
+        <div class="horses_img new"><img src="assets/image/horses/h10.svg" alt="horse" /></div>
+        <div class="horses_img"><img src="./assets/image/horses/h1.svg" alt="horse" /></div>
         <div class="horses_img"><img src="./assets/image/horses/h2.svg" alt="horse" /></div>
         <div class="horses_img"><img src="./assets/image/horses/h3.svg" alt="horse" /></div>
         <div class="horses_img"><img src="./assets/image/horses/h4.svg" alt="horse" /></div>
         <div class="horses_img"><img src="./assets/image/horses/h5.svg" alt="horse" /></div>
-        <!-- <div class="horses_img new"><img src="assets/image/horses/h6.svg" alt="horse" /></div> -->
-        <!-- <div class="horses_img"><img src="assets/image/horses/2.svg" alt="horse" /></div> -->
-        <!-- <div class="horses_img"><img src="./assets/image/horses/h5.svg" alt="horse" /></div> -->
-        <!-- <div class="horses_img"><img src="./assets/image/horses/h6.svg" alt="horse" /></div>      -->
+        <div class="horses_img new"><img src="assets/image/horses/h6.svg" alt="horse" /></div>
+        <div class="horses_img new"><img src="assets/image/horses/h7.svg" alt="horse" /></div>
+        <div class="horses_img new"><img src="assets/image/horses/h8.svg" alt="horse" /></div>
+        <div class="horses_img new"><img src="assets/image/horses/h9.svg" alt="horse" /></div>
+        <div class="horses_img new"><img src="assets/image/horses/h10.svg" alt="horse" /></div>
     </section>
 
     <footer>
@@ -334,11 +339,11 @@ in Belarus. Experienced web2 developer and IRL businessman. Arkle's guide in IRL
     <script>
         $(document).ready(function () {
             $('.autoplay').slick({
-                slidesToShow: 5,
+                slidesToShow: 10,
                 slidesToScroll: 1,
                 autoplay: true,
-                autoplaySpeed: 0,
-                speed: 4000,
+                autoplaySpeed: 2,
+                speed: 3000,
                 arrows: false,
                 swipe: false,
                 draggable: false
