--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
         <section id="Arkle">
             <h1 class="gradient">Arkle</h1>
-            <p class="description">PFP collection of 555 horses on Aptos. A game of horse racing. 1/1 art with really
-                important utility. Benefit and special advantage for holders.</p>
+            <p class="description">PFP collection of 555 horses on Aptos. Racing with a casino element. 1/1 art with
+                really important utility. Revenue sharing.</p>
             <div class="more">
                 <img src="./assets/image/mouse.svg" class="mouse" />
                 <img src="./assets/image/bottom.svg" class="line" />
