--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <ul class="nav-menu">
                         <li><a href="#">About Us</a></li>
                         <li><a href="#roadmap">Roadmap</a></li>
-                        <li><a href="#team">Meet the Team</a></li>
+                        <li><a href="#team">Team</a></li>
                         <li><a href="#partners">Partners</a></li>
                     </ul>
                 </div>
@@ -46,6 +46,9 @@
             <h1 class="gradient">Arkle</h1>
             <p class="description">PFP collection of 555 horses on Aptos. Racing with a casino element. 1/1 art with
                 really important utility. Revenue sharing.</p>
+            <div class="buy-link">
+                <a target="_blank" href="https://www.topaz.so/collection/Arkle-134d5ddae3">Buy Arkle</a>
+            </div>
             <div class="more">
                 <img src="./assets/image/mouse.svg" class="mouse" />
                 <img src="./assets/image/bottom.svg" class="line" />
@@ -63,17 +66,12 @@
                 </div>
                 <div class="group_card-description">
                     <div>
-                        <p>The first and main Arkle utility is a horse racing betting site with a casino element and
-                            regular payouts to holders.</p>
-                        <p> You chose number of the track the horse will ride and place your bet.
-                            New race will start every hour. Result is completely random. If any track is left without a
-                            bet, it will automatically be placed on our behalf.</p>
-                        <p>If you choose a winning lane, bet amount is doubled, for 2-nd place you win 50% of your bet,
-                            for 3-rd place - 25%. For 4th-8th place you will lose the bet. </p>
-                        <p>All proceeds from platform activities will be distributed to the Arkle Foundation and
-                            holders. Payments will be on a monthly basis.</p>
+                        <p>It's a game of horse racing betting with a casino element and revenue sharing.
+                            By betting on one of the 8 tracks, you can either increase it or lose it altogether.
+                            More mechanics and details will be revealed before launching.
+                        </p>
                     </div>
-                    <a href="">Start Betting</a>
+                    <a href="">Soon</a>
                 </div>
             </div>
 
@@ -84,17 +82,15 @@
                 </div>
                 <div class="group_card-description">
                     <div>
-                        <p>Fund with quarterly payments for holders from it`s successful activities. After the mint,
-                            part of the funds will go to the fund and replenish with NFT`s tokens of partner projects.
+                        <p>This is the foundation that will be implemented as part of the project. The fund will aim to
+                            help develop Aptos NFTs by investing in early projects. Holders of our NFTs will receive
+                            privileged spots in the projects with which the fund works, as well as a portion of the
+                            proceeds upon successful quarterly activity.
                         </p>
-                        <p>We want to help the development of the Aptos ecosystem by investing in early projects for the
-                            benefit of our holders. By profit, we mean WL and OG places, allocations for token sales and
-                            percentage of successful sales.</p>
-                        <p>Part of proceeds from Arkle Betting will go as funding to the Arkle Foundation. We provide
-                            monitoring of the activities and assets.</p>
-                        <p>The Arkle Foundation will fund contests and giveaways to meet community needs.</p>
+                        <p>The Arkle Foundation will fund contests and giveaways to meet community needs. It is worth
+                            noting that the Arkle Foundation will work closely with Arkle Alpha.</p>
                     </div>
-                    <a href="">Visit site</a>
+                    <a href="">Soon</a>
                 </div>
             </div>
 
@@ -105,14 +101,12 @@
                 </div>
                 <div class="group_card-description">
                     <div>
-                        <p>We have noticed that there are no really large and useful Alpha communities on Aptos yet. We
-                            intend to solve this problem.</p>
                         <p>The main aim of Arkle Alpha is to bring together experts and ordinary members of the
                             community who need their services. The best callers, the strongest collab managers, alpha
-                            hunters, etc. We will bring everyone together to build a better future for the ecosystem.
-                        </p>
+                            hunters, etc.
+                            We will bring everyone together to build a better future for the ecosystem.</p>
                     </div>
-                    <a href="">Visit site</a>
+                    <a href="">Soon</a>
                 </div>
             </div>
         </div>
@@ -134,7 +128,7 @@
                 <div class="step-list">
                     <ul type="disc">
                         <li>Project presentation;</li>
-                        <li>Community developmentaround and within the project;</li>
+                        <li>Community development around and within the project;</li>
                         <li>Making long-term partnerships; </li>
                         <li>Developing and presenting main utilities; </li>
                         <li>Preparing for the mint.</li>
@@ -148,10 +142,8 @@
                     <ul type="disc">
                         <li>Mint and fulfillment of obligations to holders;</li>
                         <li>Selling partner 1/1 NFTs; </li>
-                        <li>Implementation of Arkle Betting and Arkle Foundation;</li>
-                        <li>Launch of Thor trading bot; </li>
-                        <li>Start of payments to holders; </li>
-                        <li>Development of the alpha component of the project. </li>
+                        <li>Work on the alpha component of the project;</li>
+                        <li>Launch the game and beginning of revenue sharing; </li>
                     </ul>
                 </div>
             </div>
@@ -160,11 +152,10 @@
                 <div class="step-num">3</div>
                 <div class="step-list">
                     <ul type="disc">
-                        <li>Bringing the whole process to automatism;</li>
+                        <li>Bringing the process of attracting new players and revenue sharing to automaticity;</li>
+                        <li>Formal implementation of the Arkle Foundation.;</li>
                         <li>Actively investing in early projects;</li>
-                        <li>Arkle Merch;</li>
-                        <li>Partnerships with IRL organizations;</li>
-                        <li>Integration of Arkle Betting into other platforms and metaverse;</li>
+                        <li>Integration of Arkle Betting into other platforms, blockchains, and metaverse;</li>
                         <li>Rebranding.</li>
                     </ul>
                 </div>
@@ -174,9 +165,10 @@
                 <div class="step-num">4</div>
                 <div class="step-list">
                     <ul type="disc">
-                        <li>New product development; </li>
-                        <li>Participation in Aptos IRL events; </li>
-                        <li>Organizing personal IRL events; </li>
+                        <li>Project token implementation; </li>
+                        <li>Presentation of a new collection with its own product; </li>
+                        <li>Arkle Merch; </li>
+                        <li>Participation in Aptos IRL events;</li>
                         <li>Presentation of the new roadmap.</li>
                     </ul>
                 </div>
@@ -291,8 +283,8 @@ in Belarus. Experienced web2 developer and IRL businessman. Arkle's guide in IRL
             <a target="_blank" href="https://twitter.com/aptopad_io"><img src="./assets/image/partners/aptopad.svg"
                     alt="aptopad" /></a>
             <a target="_blank" href="https://chronon.finance/"><img src="./assets/image/partners/p1.svg" alt="p1" /></a>
-            <a target="_blank" href="https://twitter.com/UnicornsesNFT"><img src="./assets/image/partners/unicorn.svg"
-                    alt="unicorn" /></a>
+            <!-- <a target="_blank" href="https://twitter.com/UnicornsesNFT"><img src="./assets/image/partners/unicorn.svg"
+                    alt="unicorn" /></a> -->
         </div>
     </section>
 
