--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             More mechanics and details will be revealed before launching.
                         </p>
                     </div>
-                    <a href="">Soon</a>
+                    <a target="_blank" href="https://arkle.vercel.app/">Play</a>
                 </div>
             </div>
 
